<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Service</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
       <string name="username">Username</string>
    <string name="password"> | Password</string>
    <string name="username_edt_txt_hint"> | E-mail/Username</string>
    <string name="Rem_passerd">Remenber Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="forgot_passwrd">Forgot Password</string>
    <string name="serviceProvider">Service Provider</string>
    <string name="customer">Customer</string>
    <string name="continueas">Continue As : </string>
    <string name="client_name_hint">Name</string>
    <string name="client_email_hint">E-mail</string>
    <string name="client_contact_no_hint">Contact No</string>
    <string name="client_address_hint">Address</string>
    <string name="client_passwrd_hint">Password</string>
    <string name="client_conf_passwrd_hint">Confirm Password</string>
   <string name="submit_btn">Submit</string>
   <string name="new_user_text">There is No active Request</string>
<string name="make_req_btn_txt">Make Request</string>
</resources>