<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/continueasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueas"
        android:layout_gravity="center" />
    <Button 
        android:id="@+id/continueCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:layout_gravity="center"/>
    <Button 
        android:id="@+id/continueServiceProviderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serviceProvider"
        android:layout_gravity="center"/>

</LinearLayout>